; ModuleID = '/home/carl/AnghaBench/obs-studio/libobs/extr_obs-hotkey.c_enum_hotkey.c'
source_filename = "/home/carl/AnghaBench/obs-studio/libobs/extr_obs-hotkey.c_enum_hotkey.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 }
%struct.obs_hotkey_internal_enum_forward = type { i32 (i32, i32, %struct.TYPE_4__*)*, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i64, %struct.TYPE_4__*)* @enum_hotkey to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @enum_hotkey(i8* %0, i64 %1, %struct.TYPE_4__* %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i64, align 8
  %6 = alloca %struct.TYPE_4__*, align 8
  %7 = alloca %struct.obs_hotkey_internal_enum_forward*, align 8
  store i8* %0, i8** %4, align 8
  store i64 %1, i64* %5, align 8
  store %struct.TYPE_4__* %2, %struct.TYPE_4__** %6, align 8
  %8 = load i64, i64* %5, align 8
  %9 = call i32 @UNUSED_PARAMETER(i64 %8)
  %10 = load i8*, i8** %4, align 8
  %11 = bitcast i8* %10 to %struct.obs_hotkey_internal_enum_forward*
  store %struct.obs_hotkey_internal_enum_forward* %11, %struct.obs_hotkey_internal_enum_forward** %7, align 8
  %12 = load %struct.obs_hotkey_internal_enum_forward*, %struct.obs_hotkey_internal_enum_forward** %7, align 8
  %13 = getelementptr inbounds %struct.obs_hotkey_internal_enum_forward, %struct.obs_hotkey_internal_enum_forward* %12, i32 0, i32 0
  %14 = load i32 (i32, i32, %struct.TYPE_4__*)*, i32 (i32, i32, %struct.TYPE_4__*)** %13, align 8
  %15 = load %struct.obs_hotkey_internal_enum_forward*, %struct.obs_hotkey_internal_enum_forward** %7, align 8
  %16 = getelementptr inbounds %struct.obs_hotkey_internal_enum_forward, %struct.obs_hotkey_internal_enum_forward* %15, i32 0, i32 1
  %17 = load i32, i32* %16, align 8
  %18 = load %struct.TYPE_4__*, %struct.TYPE_4__** %6, align 8
  %19 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  %21 = load %struct.TYPE_4__*, %struct.TYPE_4__** %6, align 8
  %22 = call i32 %14(i32 %17, i32 %20, %struct.TYPE_4__* %21)
  ret i32 %22
}

declare dso_local i32 @UNUSED_PARAMETER(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
